arreglo en logo

--- a/form.html
+++ b/form.html
@@ -20,7 +20,7 @@
 
 <body>
   <header class="header pulse">
-    <img class="header__img pulse" src="assets/MK_logo.gif" alt="Logo mk">
+    <img class="header__img pulse" src="assets/logorojo.gif" alt="Logo mk">
 
     <div class="header__menu">
       <div class="header__menu--profile">
