--- a/preludio.html
+++ b/preludio.html
@@ -17,7 +17,7 @@
 <body class="principal">
 
   <header class="header pulse">
-    <img class="header__img pulse" src="assets/MK_logo.gif" alt="Logo mk">
+    <img class="header__img pulse" src="assets/logorojo.gif" alt="Logo mk">
 
     <div class="header__menu">
       <div class="header__menu--profile">
