Se agrega cambios en performace

--- a/form.html
+++ b/form.html
@@ -60,7 +60,7 @@
     <section class="register__container">
       <h2>Regístrate</h2>
       <form class="register__container--form" method="POST" action="confirmation.html">
-        <i>Nombres<span class="caracter-red">*</span>:</i><input class="input" type="text" required>
+        <i>Nickname<span class="caracter-red">*</span>:</i><input class="input" type="text" required>
         <i>Apellidos<span class="caracter-red">*</span>:</i><input class="input" type="text" required>
         <i>e-mail<span class="caracter-red">*</span>:</i><input class="input" type="email">
 
@@ -68,9 +68,9 @@
         <button class="button" href="#openModal" type="submit">Registrarme</button>
 
       </form>
-      <div class="matrix"></div>
+      <!-- <div class="matrix"></div>
       <div class="matrix matrix--dos"></div>
-      <div class="matrix matrix--tres"></div>
+      <div class="matrix matrix--tres"></div> -->
     </section>
 
    
@@ -78,11 +78,10 @@
   
 
 
- <footer class="footer">
-      <a href="#">Terminos de uso</a>
-      <a href="#">Declaración de privacidad</a>
-      
-    </footer>
+  <footer class="footer">
+    <a style="text-decoration: none;">Todas las marcas comerciales y marcas registradas son propiedad de sus respectivos dueños</a>
+
+  </footer>
 
 </body>
 
