--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
   <div class="matrix matrix--tres"></div>
 
 
-  <footer class="footer">
-    <a style="text-decoration: none;" href="#">Todas las marcas comerciales y marcas registradas son propiedad de sus respectivos dueños</a>
+  <footer class="footer" >
+    <a style="text-decoration: none;">Todas las marcas comerciales y marcas registradas son propiedad de sus respectivos dueños</a>
 
   </footer>
 </body>
