--- a/preludio.html
+++ b/preludio.html
@@ -83,10 +83,9 @@
 
 
   <footer class="footer">
-      <a href="#">Terminos de uso</a>
-      <a href="#">Declaración de privacidad</a>
-      
-    </footer>
+    <a style="text-decoration: none;">Todas las marcas comerciales y marcas registradas son propiedad de sus respectivos dueños</a>
+
+  </footer>
 
 </body>
 
