--- a/Goro.html
+++ b/Goro.html
@@ -50,11 +50,11 @@
     </center>
 
     <section class="johnnycage">
-      <div class="johnnycage__container">
+      <div class="johnnycage__container" style="width: auto">
         <img src="assets/MORTAL KOMBAT BLOG/goro.gif" />
       </div>
 
-      <div class="johnnycage__container2">
+      <div class="johnnycage__container2" style="margin-left: 10px">
         <h1>Principe de los Shokan:</h1>
         <h3>
           Goro fue introducido en el primer juego de Mortal Kombat como el
