--- a/form.html
+++ b/form.html
@@ -59,7 +59,7 @@
 
     <section class="register__container">
       <h2>Regístrate</h2>
-      <form class="register__container--form" method="" action="confirmation.html">
+      <form class="register__container--form" >
         <i>Nickname<span class="caracter-red">*</span>:</i><input class="input" type="text" required>
         <i>Apellidos<span class="caracter-red">*</span>:</i><input class="input" type="text" required>
         <i>e-mail<span class="caracter-red">*</span>:</i><input class="input" type="email">
