--- a/Shang_Tsung.html
+++ b/Shang_Tsung.html
@@ -46,7 +46,7 @@
       </div>
     </header>
     <center>
-      <h1 class="main__title"></h1>
+      <h1 class="main__title">Shang Tsung</h1>
     </center>
 
     <section class="johnnycage">
