--- a/index.html
+++ b/index.html
@@ -49,8 +49,13 @@
   </header>
 
   <section class="main">
-    <h2 class="main__title">¡ Bienvenidos a Mortal Combat !</h2>
-    <div class="main__image"></div>
+    <!-- <h2 class="main__title">¡ Bienvenidos a Mortal Combat !</h2> -->
+    <div class="main__image">
+
+      <div class="main__text">¡ Bienvenidos a Mortal Combat !</div>
+    </div>
+    
+
 
   </section>
 
