add new characters

--- a/kano.html
+++ b/kano.html
@@ -19,7 +19,7 @@
 
   <body>
     <header class="header pulse">
-      <img class="header__img pulse" src="assets/logorojo.gif" alt="Logo mk" />
+      <img class="header__img pulse" src="assets/MK_logo.gif" alt="Logo mk" />
 
       <div class="header__menu">
         <div class="header__menu--profile">
@@ -46,18 +46,20 @@
       </div>
     </header>
     <center>
-      <h1 class="main__title">Shang Tsung</h1>
+      <h1 class="main__title">Kano</h1>
     </center>
 
     <section class="johnnycage">
       <div class="johnnycage__container">
-        <img src="assets/MORTAL KOMBAT BLOG/Shang Tsung.gif" />
+        <img src="assets/MORTAL KOMBAT BLOG/KANO.jpg" />
       </div>
 
       <div class="johnnycage__container2">
-        <h1>Hechizero del Out-World:</h1>
+        <h1>El Mercenario:</h1>
         <h3>
-            Bi Han, el original Sub-Zero y posteriormente Noob Saibot, fue el asesino de Hanzo Hasashi (Scorpion) y es el miembro más representativo del Lin Kuei. Luego de su derrota en el primer juego (canónicamente, el décimo torneo), nada se supo de él hasta su supuesta aparición en UMK3 como personaje secreto, cuyo motivo fue únicamente aprovechar el actualizado sprite de ninja. No fue sino hasta MK: Deception que se reveló que Bi-Han se había transformado en el misterioso personaje oculto de Mortal Kombat II, Noob Saibot. 
+          Kano hizo hecho su debut en el primer juego de Mortal Kombat. Fue el líder de la organización criminal conocido como el Dragón Negro. El lado derecho de la cara de Kano ha sido sustituido por una placa de metal y de ojo rojo brillante, que pueden emitir rayos láser.
+
+          Después de escuchar rumores de que el palacio de Shang Tsung estaba lleno de riquezas, Kano decidió entrar en el torneo de Mortal Kombat con la intención de robar las riquezas para sí mismo y el Dragón Negro. Sin embargo, Sonya Blade, miembro líder de las Fuerzas Especiales de EE.UU., ha seguido de Kano a la isla de Shang Tsung. Fue obligada por Shang Tsung para entrar en el torneo. Tanto Kano como Sonya sobrevivieron al torneo, pero fueron capturados posteriormente por Shang Tsung.
         </h3>
       </div>
     </section>
