--- a/liu kang.html
+++ b/liu kang.html
@@ -19,7 +19,7 @@
 
   <body>
     <header class="header pulse">
-      <img class="header__img pulse" src="assets/logorojo.gif" alt="Logo mk" />
+      <img class="header__img pulse" src="assets/MK_logo.gif" alt="Logo mk" />
 
       <div class="header__menu">
         <div class="header__menu--profile">
@@ -46,18 +46,20 @@
       </div>
     </header>
     <center>
-      <h1 class="main__title">Shang Tsung</h1>
+      <h1 class="main__title">Liu Kang</h1>
     </center>
 
     <section class="johnnycage">
       <div class="johnnycage__container">
-        <img src="assets/MORTAL KOMBAT BLOG/Shang Tsung.gif" />
+        <img src="assets/MORTAL KOMBAT BLOG/Liu Kang.gif" />
       </div>
 
       <div class="johnnycage__container2">
-        <h1>Hechizero del Out-World:</h1>
+        <h1>El Monje Shaolin:</h1>
         <h3>
-            Bi Han, el original Sub-Zero y posteriormente Noob Saibot, fue el asesino de Hanzo Hasashi (Scorpion) y es el miembro más representativo del Lin Kuei. Luego de su derrota en el primer juego (canónicamente, el décimo torneo), nada se supo de él hasta su supuesta aparición en UMK3 como personaje secreto, cuyo motivo fue únicamente aprovechar el actualizado sprite de ninja. No fue sino hasta MK: Deception que se reveló que Bi-Han se había transformado en el misterioso personaje oculto de Mortal Kombat II, Noob Saibot. 
+          Liu Kang es el personaje principal de la serie de juegos de lucha Mortal Kombat. Es un personaje estereotipo, una fusión tanto de tradiciones Orientales como Occidentales en películas de artes marciales.
+
+          Aunque en nombre de un monje Shaolin, su estilo y modales están más occidentalizados y su aspecto basado en el de Bruce Lee. Se mueve rápidamente y posee habilidades de lucha formidables. Liu Kang es uno de los mejores guerreros del Reino de la Tierra junto con Kung Lao. En todas partes de la serie, Liu Kang gradualmente ha sido mostrado como el héroe principal, haciéndose campeón después del primer torneo de Mortal Kombat y luego sigue la búsqueda de Raiden.
         </h3>
       </div>
     </section>
