--- a/scorpion.html
+++ b/scorpion.html
@@ -19,7 +19,7 @@
 
   <body>
     <header class="header pulse">
-      <img class="header__img pulse" src="assets/logorojo.gif" alt="Logo mk" />
+      <img class="header__img pulse" src="assets/MK_logo.gif" alt="Logo mk" />
 
       <div class="header__menu">
         <div class="header__menu--profile">
@@ -46,18 +46,18 @@
       </div>
     </header>
     <center>
-      <h1 class="main__title">Shang Tsung</h1>
+      <h1 class="main__title">Scorpion</h1>
     </center>
 
     <section class="johnnycage">
       <div class="johnnycage__container">
-        <img src="assets/MORTAL KOMBAT BLOG/Shang Tsung.gif" />
+        <img src="assets/MORTAL KOMBAT BLOG/scorpion.GIF" />
       </div>
 
       <div class="johnnycage__container2">
-        <h1>Hechizero del Out-World:</h1>
+        <h1>Clan Shirai Ryu:</h1>
         <h3>
-            Bi Han, el original Sub-Zero y posteriormente Noob Saibot, fue el asesino de Hanzo Hasashi (Scorpion) y es el miembro más representativo del Lin Kuei. Luego de su derrota en el primer juego (canónicamente, el décimo torneo), nada se supo de él hasta su supuesta aparición en UMK3 como personaje secreto, cuyo motivo fue únicamente aprovechar el actualizado sprite de ninja. No fue sino hasta MK: Deception que se reveló que Bi-Han se había transformado en el misterioso personaje oculto de Mortal Kombat II, Noob Saibot. 
+          Scorpion es uno de los personajes originales de la serie y uno de los más populares junto con Sub-Zero entre los fans. Todo su trasfondo se reduce a una interminable búsqueda de venganza por la muerte de su familia y clan, la cual parece lejos de satisfacer. De todos los ninjas del juego, es el único que no ha variado demasiado en su historia como en su imagen, a diferencia de sus similares, a pesar de aparecer en varios juegos. Su verdadero nombre es Hanzo Hasashi , sin embargo en la serie MK: Conquest es llamado Takeda. También es el favorito de Ed Boon, quien reprodujo su característico "Get over here!" y "Come here!" en la primera película. Al principio fue un pallet swap derivado de otro personaje (Sub-Zero), la cual fue una técnica usado por varios juegos de la misma época para ahorrar memoria.
         </h3>
       </div>
     </section>
