--- a/sonyablade.html
+++ b/sonyablade.html
@@ -19,7 +19,7 @@
 
   <body>
     <header class="header pulse">
-      <img class="header__img pulse" src="assets/logorojo.gif" alt="Logo mk" />
+      <img class="header__img pulse" src="assets/MK_logo.gif" alt="Logo mk" />
 
       <div class="header__menu">
         <div class="header__menu--profile">
@@ -46,18 +46,20 @@
       </div>
     </header>
     <center>
-      <h1 class="main__title">Shang Tsung</h1>
+      <h1 class="main__title">Sonya Blade</h1>
     </center>
 
     <section class="johnnycage">
       <div class="johnnycage__container">
-        <img src="assets/MORTAL KOMBAT BLOG/Shang Tsung.gif" />
+        <img src="assets/MORTAL KOMBAT BLOG/sonya blade.GIF" />
       </div>
 
       <div class="johnnycage__container2">
-        <h1>Hechizero del Out-World:</h1>
+        <h1>Fuerzas Especiales:</h1>
         <h3>
-            Bi Han, el original Sub-Zero y posteriormente Noob Saibot, fue el asesino de Hanzo Hasashi (Scorpion) y es el miembro más representativo del Lin Kuei. Luego de su derrota en el primer juego (canónicamente, el décimo torneo), nada se supo de él hasta su supuesta aparición en UMK3 como personaje secreto, cuyo motivo fue únicamente aprovechar el actualizado sprite de ninja. No fue sino hasta MK: Deception que se reveló que Bi-Han se había transformado en el misterioso personaje oculto de Mortal Kombat II, Noob Saibot. 
+          Sonya Blade es un miembro de una unidad superior de las Fuerzas Especiales de los Estados Unidos. Su impulsividad es catalizada por su Comandante superior y buen amigo "Jax" Briggs. Sonya representa a una mujer muy emancipada y testaruda, con obstinación y orgullo, ella se preocupa por las vidas de sus amigos y compañeros. Se rumorea que pueda tener alguna relación sentimental con Johnny Cage o sólo atracción física.
+
+          Ella tiene una enemistad de muchos años con Kano, que representa todo lo que Sonya desprecia. Kano asesinó a su compañero en las fuerzas especiales y es por eso que esta dispuesta a buscarlo hasta las últimas consecuencias.
         </h3>
       </div>
     </section>
