--- a/kano.html
+++ b/kano.html
@@ -11,7 +11,7 @@
     />
     <!-- Styles -->
     <link rel="stylesheet" href="./styles.css" />
-    <link rel="icon" type="image/png" href="assets/New_dragon.jpg" />
+    <link rel="icon" type="image/png" href="assets/logorojo.gif" />
 
     <!-- Title -->
     <title>Mortal Kombat</title>
@@ -19,7 +19,7 @@
 
   <body>
     <header class="header pulse">
-      <img class="header__img pulse" src="assets/MK_logo.gif" alt="Logo mk" />
+      <img class="header__img pulse" src="assets/logorojo.gif" alt="Logo mk" />
 
       <div class="header__menu">
         <div class="header__menu--profile">
@@ -51,7 +51,7 @@
 
     <section class="johnnycage">
       <div class="johnnycage__container">
-        <img src="assets/MORTAL KOMBAT BLOG/KANO.jpg" />
+        <img style="width:300px" src="assets/MORTAL KOMBAT BLOG/kano.gif" />
       </div>
 
       <div class="johnnycage__container2">
