--- a/form.html
+++ b/form.html
@@ -59,13 +59,13 @@
 
     <section class="register__container">
       <h2>Regístrate</h2>
-      <form class="register__container--form" >
+      <form class="register__container--form" method="post" action="confirmation.html">
         <i>Nickname<span class="caracter-red">*</span>:</i><input class="input" type="text" required>
         <i>Apellidos<span class="caracter-red">*</span>:</i><input class="input" type="text" required>
         <i>e-mail<span class="caracter-red">*</span>:</i><input class="input" type="email">
 
         </div>
-        <button class="button" href="confirmation.html" type="submit">Registrarme</button>
+        <button class="button" type="submit">Registrarme</button>
 
       </form>
       <!-- <div class="matrix"></div>
