--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     <!-- <h2 class="main__title">¡ Bienvenidos a Mortal Combat !</h2> -->
     <div class="main__image">
 
-      <div class="main__text">¡ Bienvenidos a Mortal Combat !</div>
+      <div class="main__text">¡ Bienvenidos a Mortal Kombat !</div>
     </div>
     
 
