--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
   </header>
 
   <section class="main">
-    <!-- <h2 class="main__title">¡ Bienvenidos a Mortal Combat !</h2> -->
+    <!-- <h2 class="main__title">¡ Bienvenidos a Mortal Kombat !</h2> -->
     <div class="main__image">
 
       <div class="main__text">¡ Bienvenidos a Mortal Combat !</div>
